--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,17 +1,16 @@
 {
   "dependencies": {
     "com.unity.feature.2d": "2.0.1",
-    "com.unity.ide.rider": "3.0.31",
+    "com.unity.ide.rider": "3.0.34",
     "com.unity.inputsystem": "1.9.0",
-    "com.unity.multiplayer.tools": "2.2.0",
-    "com.unity.netcode.gameobjects": "2.0.0-pre.4",
+    "com.unity.multiplayer.tools": "2.2.1",
+    "com.unity.netcode.gameobjects": "2.1.1",
     "com.unity.render-pipelines.universal": "17.0.3",
     "com.unity.services.lobby": "1.2.2",
     "com.unity.services.relay": "1.1.1",
     "com.unity.test-framework": "1.4.5",
     "com.unity.timeline": "1.8.7",
     "com.unity.ugui": "2.0.0",
-    "com.unity.visualscripting": "1.9.4",
     "com.veriorpies.parrelsync": "https://github.com/VeriorPies/ParrelSync.git?path=/ParrelSync",
     "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
