--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.unity.feature.2d": "2.0.1",
     "com.unity.ide.rider": "3.0.34",
     "com.unity.inputsystem": "1.9.0",
+    "com.unity.mobile.android-logcat": "1.4.3",
     "com.unity.multiplayer.tools": "2.2.1",
     "com.unity.netcode.gameobjects": "2.1.1",
     "com.unity.render-pipelines.universal": "17.0.3",
